# go-client-aiohttp-server

./: README.md
aiohttp_files_hash/: Dockerfile  docker-compose.yaml  pyproject.toml
aiohttp_files_hash/src/: app.py
aiohttp_files_hash/src/api/status/: del_handler.py  get_handler.py  post_file.py  put_handler.py
aiohttp_files_hash/src/method/: get_dir_list_files.py
aiohttp_files_hash/src/service/: routers.py
go_client/: config.cfg  go.mod  main.go
